[project]
name = "imap_dedup"
version = "0.0.1"
description = "Simple CLI to deduplicate IMAP messages"
authors = [
    { name = "Colin Heinzmann", email = "colin@heinzmann.me" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.1",
    "IMAPClient>=2.3",
    "retrying>=1.3",
    "tabulate>=0.9",
    "tqdm>=4.66",
]
